# cforge

./: .cforge_dependency_hashes  .cforge_toml_hash  .clang-format  .clang-tidy  .gitignore  404.html  CMakeLists.txt  CMakeSettings.json  COMMERCIAL_LICENSE  Cargo.toml  LICENSE  README.md  build-and-run.ps1  cforge.hash  cforge.sln  cforge.toml  cforge.vcxproj  cforge.vcxproj.filters  index.html  old-cforge.toml  workspace.cforge.toml
.github/workflows/: deploy-docs.yml  release.yaml
assets/css/: styles.4b8854f1.css  styles.6929d2b6.css
assets/js/: 0e384e19.c7bb7ecd.js  0e384e19.f0b3ff45.js  144.6fad404f.js  14d2ea03.f3728455.js  15db3679.e680119c.js  2daa58cc.2d7a19a3.js  3a34d351.793711d6.js  3b8c55ea.e37961ae.js  3b8c55ea.f53a3a78.js  449695dd.aa46c0b0.js  4d54d076.a0b0d202.js  4ffdd8cd.e9819607.js  5a8f7a10.7e30bf2a.js  5e38ca63.3f82c8a2.js  5e38ca63.cf290a01.js  66992f67.b3f31731.js  69f04c60.40763c5a.js  72e14192.36ef3470.js  814f3328.48f572c7.js  9977744e.64e515fe.js  9b4cd6e8.7ece4da3.js  9d9f8394.80c9ab80.js  9d9f8394.85e7fac6.js  9d9f8394.bb26fa53.js  a6aa9e1f.45357860.js  a93ade8a.d06ca84b.js  ac5280f2.e956a6c9.js  acecf23e.16184fa9.js  e0e2aafe.0872a652.js  eedadc0c.0fb1fdb0.js  main.71807c2a.js  main.be4e637d.js  main.e7135259.js  runtime~main.66af0c4a.js  runtime~main.69ed60fd.js  runtime~main.892801d8.js
bench/: bench_glob.cpp  bench_semver.cpp
blog/: atom.xml  index.html  rss.xml
blog/announcing-cforge-beta-v1-4-0/: index.html
blog/archive/: index.html
blog/release/: index.html
blog/tags/: index.html
build-debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CPack.GenericDescription.txt  CPackConfig.cmake  CPackSourceConfig.cmake  build.ninja  cmake_install.cmake
build-release/: .ninja_deps  .ninja_log  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  build.ninja  cpp-forge.sln  default.vcxproj  default.vcxproj.filters
build-release/tests/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cpp-forge-tests.vcxproj  cpp-forge-tests.vcxproj.filters  run-tests.vcxproj  run-tests.vcxproj.filters
cforge-action/: action.yml
cforge-action/scripts/: install.ps1  install.sh
cforge-vs/: .gitignore  CforgeVS.csproj  CforgeVS.pkgdef  CforgeVS.sln  CforgeVSPackage.vsct  LICENSE  README.md  source.extension.vsixmanifest
cforge-vs/BuildSystem/: Cforge.props  Cforge.targets
cforge-vs/Dialogs/: InputDialog.xaml  InputDialog.xaml.cs
cforge-vs/ProjectSystem/: CforgeBuildManager.cs  CforgeProjectSystem.cs
cforge-vs/TestAdapter/: CforgeTestDiscoverer.cs  CforgeTestExecutor.cs
cforge-vs/ToolWindows/: CforgeExplorerWindow.cs  CforgeExplorerWindow.xaml  CforgeExplorerWindow.xaml.cs  DependencyToolWindow.cs  DependencyToolWindow.xaml  DependencyToolWindow.xaml.cs  OutputToolWindow.cs  OutputToolWindow.xaml  OutputToolWindow.xaml.cs  ProjectPropertiesWindow.cs  ProjectPropertiesWindow.xaml  ProjectPropertiesWindow.xaml.cs  TestResultsWindow.cs  TestResultsWindow.xaml  TestResultsWindow.xaml.cs
cforge-vs/src/: BuildInterceptor.cs  CforgeFileWatcher.cs  CforgeOptionsPage.cs  CforgePackage.cs  CforgeProjectDetector.cs  CforgeRunner.cs  CforgeTomlParser.cs  OpenFolderSupport.cs  PackageIds.cs  VcxprojGenerator.cs  WorkspaceState.cs
cforge-vscode/: .vscodeignore  README.md  package-lock.json  package.json
cforge-vscode/src/: cforgeRunner.ts  dependencyTree.ts  extension.ts  statusBar.ts  taskProvider.ts  tomlLanguageFeatures.ts
cforge-web/: docusaurus.config.js  package-lock.json  sidebars.js
cforge-web/.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.mjs  registry.js  routes.js  routesChunkNames.json
cforge-web/blog/: 2025-03-25-announcing-cforge-beta-v1.4.0.md
cforge-web/docs/: LICENSE.txt  advanced-topics.md  build-variants.md  command-reference.md  contributing.md  cross-compilation.md  dependencies.md  examples.md  ide-integration.md  installation.md  intro.md  license.md  project-configuration.md  quick-start.md  scripts-hooks.md  testing.md  troubleshooting.md  workspaces.md
docs/: 404.html  CNAME  cforge.toml.example  docusaurus.config.js  index.html  package-lock.json  sidebars.js  sitemap.xml  workspace.toml.example
gh-pages/: 404.html  index.html
hi/: CMakeLists.txt  README.md  cforge.toml  cforge.workspace.toml
hi/src/: main.cpp  (+1 more)
hi2/: .cforge_dependency_hashes  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  LICENSE  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  build.ninja  cforge.toml  cforge.workspace.toml  hi2.sln  hi2.vcxproj  hi2.vcxproj.filters
hi3/: .cforge_workspace_hash  CMakeLists.txt  LICENSE  README.md  cforge.toml  cforge.workspace.toml
hi4/: .cforge_toml_hash  CMakeLists.txt  LICENSE  README.md  cforge.toml
markdown-page/: index.html
proj1/: CMakeLists.txt  LICENSE  build-Debug.ninja  build-RelWithDebInfo.ninja  build-Release.ninja  build.ninja  cforge.toml
proj1/include/proj1/: example.hpp
proj1/src/: example.cpp
proj1/tests/: CMakeLists.txt  test_example.cpp  test_main.cpp
proj2/: LICENSE  cforge.toml
proj3/: LICENSE  README.md  cforge.toml
scripts/: bootstrap.bat  bootstrap.ps1  bootstrap.sh  install.ps1  install.sh  refactor_types.py
src/: build.rs  cli.rs  commands.rs  config.rs  cross_compile.rs  ctest.rs  dependencies.rs  errors.rs  example.cpp  ide.rs  main.cpp  main.rs  output_utils.rs  project.rs  tools.rs  utils.rs  workspace.rs
test-project/: CMakeLists.txt  README.md  cforge.toml
test-workspace/: workspace.cforge.toml
test-workspace/lib-a/tests/: CMakeLists.txt  test_example.cpp  test_main.cpp
tests/: CMakeLists.txt  bench_framework.h  test_example.cpp  test_framework.h  test_framework_self.cpp  test_lockfile.cpp  test_main.cpp  test_test.cpp  test_version.cpp
testws/: cforge.workspace.toml
(+613 files in other folders)
