[package]
name = "cforge"
version = "1.4.3-beta"
edition = "2021"
authors = ["Chase Sunstrom casunstrom@gmail.com"]
description = "A TOML-based build system for C/C++ with CMake and vcpkg integration"
readme = "README.md"
license = "MIT"
repository = "https://github.com/ChaseSunstrom/cforge"
keywords = ["build-system", "CPP", "cmake", "vcpkg",  "cforge"]
categories = ["development-tools", "development-tools::build-utils"]
exclude = [
    "target/*",
    "docs/*",
    ".git/*",
    ".github/*",
]

[dependencies]
clap = { version = "4.3", features = ["derive"] }
toml = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
glob = "0.3"
dirs = "5.0"
thiserror = "1.0"
anyhow = "1.0"
regex = "1.11.1"
num_cpus = "1.16.0"
lazy_static = "1.5.0"
chrono = "0.4.38"
pathdiff = "0.2.2"